feat: Add methods for updating and deleting orders. Update swagger definitions
