# domains/orders/orders.swagger.yaml
@@ -209,3 +209,101 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/Order'
+    put:
+      summary: Update details of selected Order.
+      tags:
+        - Order
+      description: Update selected order from Dinners API.
+      parameters:
+        - name: orderId
+          required: true
+          in: path
+          schema:
+            type: string
+            description: Order id
+            example: "611c15984a73d963f00e3adb"
+      requestBody: {
+        content: {
+          application/json: {
+            schema: {
+              type: object,
+              properties: {
+                title: { 
+                  description: "Title of updated ordered dinner",
+                  type: string
+                },
+                dinner_id: {
+                  description: "Dinner id of updated order",
+                  type: string
+                },
+                client_name: {
+                  description: "Name of client who is making order",
+                  type: string
+                },
+                client_phone: {
+                  description: "Phone number of client who is making order",
+                  type: string
+                },
+                client_email: {
+                  description: "Email of client who is making order",
+                  type: string
+                },
+                price: {
+                  description: "Price of updated order",
+                  type: string
+                },
+                calories: {
+                  description: "Calories of dinner of updated order",
+                  type: number
+                },
+                weight: {
+                  description: "Weight of dinner of updated order",
+                  type: number
+                },
+                ingredients: {
+                  description: "List of ingredient ids in updated order",
+                  type: array,
+                  items: {
+                    type: string
+                  }
+                }
+              },
+              required: [title, client_name, client_phone, price, calories, ingredients]
+            }
+          }
+        }
+      }
+      responses:
+        200:
+          description: Ok.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  updated:
+                    type: boolean
+    delete:
+      summary: Delete selected Order.
+      tags:
+        - Order
+      description: Delete selected order from Dinners API.
+      parameters:
+        - name: orderId
+          required: true
+          in: path
+          schema:
+            type: string
+            description: Order id
+            example: "611c15984a73d963f00e3adb"
+      responses:
+        200:
+          description: Ok.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  deleted:
+                    type: boolean
+        
